--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@fullcalendar/core": "^6.1.15",
     "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/list": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
@@ -21,11 +22,13 @@
     "@mui/x-date-pickers": "^7.12.0",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5"
   },
